==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/RP/LLD/PWMv1/hal_pwm_lld.c <==
#include "hal.h"

void pwm_lld_init(void) {

#if RP_PWM_USE_PWM0 == TRUE
  /* Driver initialization.*/
  pwmObjectInit(&PWMD0);
  PWMD0.pwm = PWM;
  PWMD0.timer_id = 0;
  PWMD0.channels = PWM_CHANNELS;
  hal_lld_peripheral_reset(RESETS_ALLREG_PWM);
#endif

#if RP_PWM_USE_PWM1 == TRUE
  /* Driver initialization.*/
  pwmObjectInit(&PWMD1);
  PWMD1.pwm = PWM;
  PWMD1.timer_id = 1;
  PWMD1.channels = PWM_CHANNELS;
  hal_lld_peripheral_reset(RESETS_ALLREG_PWM);
#endif

#if RP_PWM_USE_PWM2 == TRUE
  /* Driver initialization.*/
  pwmObjectInit(&PWMD2);
  PWMD2.pwm = PWM;
  PWMD2.timer_id = 2;
  PWMD2.channels = PWM_CHANNELS;
  hal_lld_peripheral_reset(RESETS_ALLREG_PWM);
#endif

#if RP_PWM_USE_PWM3 == TRUE
  /* Driver initialization.*/
  pwmObjectInit(&PWMD3);
  PWMD3.pwm = PWM;
  PWMD3.timer_id = 3;
  PWMD3.channels = PWM_CHANNELS;
  hal_lld_peripheral_reset(RESETS_ALLREG_PWM);
#endif

#if RP_PWM_USE_PWM4 == TRUE
  /* Driver initialization.*/
  pwmObjectInit(&PWMD4);
  PWMD4.pwm = PWM;
  PWMD4.timer_id = 4;
  PWMD4.channels = PWM_CHANNELS;
  hal_lld_peripheral_reset(RESETS_ALLREG_PWM);
#endif

#if RP_PWM_USE_PWM5 == TRUE
  /* Driver initialization.*/
  pwmObjectInit(&PWMD5);
  PWMD5.pwm = PWM;
  PWMD5.timer_id = 5;
  PWMD5.channels = PWM_CHANNELS;
  hal_lld_peripheral_reset(RESETS_ALLREG_PWM);
#endif

#if RP_PWM_USE_PWM6 == TRUE
  /* Driver initialization.*/
  pwmObjectInit(&PWMD6);
  PWMD6.pwm = PWM;
  PWMD6.timer_id = 6;
  PWMD6.channels = PWM_CHANNELS;
  hal_lld_peripheral_reset(RESETS_ALLREG_PWM);
#endif

#if RP_PWM_USE_PWM7 == TRUE
  /* Driver initialization.*/
  pwmObjectInit(&PWMD7);
  PWMD7.pwm = PWM;
  PWMD7.timer_id = 7;
  PWMD7.channels = PWM_CHANNELS;
  hal_lld_peripheral_reset(RESETS_ALLREG_PWM);
#endif

}

void pwm_lld_start(PWMDriver *pwmp) {
  PWM_TypeDef *p = pwmp->pwm;

  if (pwmp->state == PWM_STOP) {
    /* Clock activation and timer reset.*/
    hal_lld_peripheral_unreset(RESETS_ALLREG_PWM);
    nvicEnableVector(RP_PWM_IRQ_WRAP_NUMBER, RP_PWM_IRQ_WRAP_NUMBER_PRIORITY);
  } else {
    /* Driver re-configuration scenario, it must be stopped first.*/
    p->CH[pwmp->timer_id].CSR = 0;
    p->CH[pwmp->timer_id].CTR = 0;
    p->CH[pwmp->timer_id].CC  = 0;
  }

  /* Counter clock divider */
  halfreq_t sys_clk = halClockGetPointX(clk_sys);
  halfreq_t pwm_freq_min = sys_clk / 256;

  osalDbgAssert(pwmp->config->frequency >= pwm_freq_min, "RP2040 pwm counter frequency has a minimal value of the system clock divided by 256");

  /* Integer part must not be zero */
  halfreq_t integer = sys_clk / pwmp->config->frequency;
  integer = integer == 0 ? 1 : integer;

  halfreq_t fraction = (sys_clk << 4) / pwmp->config->frequency;
  p->CH[pwmp->timer_id].DIV = (integer << 4 | (fraction & 0xF));
  p->CH[pwmp->timer_id].TOP = pwmp->period;

  uint32_t csr = PWM_CSR_EN | PWM_CSR_DIVMODE_FREE;
  csr &= ~PWM_CSR_PH_CORRECT;

  switch (pwmp->config->channels[0].mode & PWM_OUTPUT_MASK) {
  case PWM_OUTPUT_ACTIVE_LOW:
    csr |= PWM_CSR_A_INV;
    break;
  case PWM_OUTPUT_ACTIVE_HIGH:
    csr &= ~PWM_CSR_A_INV;
    break;
  default:
    ;
  }

  switch (pwmp->config->channels[1].mode & PWM_OUTPUT_MASK) {
  case PWM_OUTPUT_ACTIVE_LOW:
    csr |= PWM_CSR_B_INV;
    break;
  case PWM_OUTPUT_ACTIVE_HIGH:
    csr &= ~PWM_CSR_B_INV;
    break;
  default:
    ;
  }

  p->CH[pwmp->timer_id].CSR = csr;
}

void pwm_lld_stop(PWMDriver *pwmp) {
  PWM_TypeDef *p = pwmp->pwm;

  /* If in ready state then disables the PWM clock.*/
  if (pwmp->state == PWM_READY) {
    p->CH[pwmp->timer_id].CSR = 0U;
    p->CH[pwmp->timer_id].CTR = 0U;
    p->CH[pwmp->timer_id].CC  = 0U;
    p->CH[pwmp->timer_id].DIV = 1U;
    p->CH[pwmp->timer_id].TOP = 0xFFFF;
  }

  /* If all timers are disabled, disable the interrupt and reset pwm peripheral */
  if (!p->EN) {
    nvicDisableVector(RP_PWM_IRQ_WRAP_NUMBER);
    hal_lld_peripheral_reset(RESETS_ALLREG_PWM);
  }
}

void pwm_lld_enable_channel(PWMDriver *pwmp,
                            pwmchannel_t channel,
                            pwmcnt_t width) {
  uint32_t current_cc = pwmp->pwm->CH[pwmp->timer_id].CC;

  if (channel == 0) {
    pwmp->pwm->CH[pwmp->timer_id].CC = (width & PWM_CC_A) | (current_cc & PWM_CC_B);
  } else {
    pwmp->pwm->CH[pwmp->timer_id].CC = (current_cc & PWM_CC_A) | ((width << PWM_CC_B_Pos) & PWM_CC_B);
  }
}

void pwm_lld_disable_channel(PWMDriver *pwmp, pwmchannel_t channel) {
  if (channel == 0) {
    pwmp->pwm->CH[pwmp->timer_id].CC &= ~PWM_CC_A | PWM_CC_B;
  } else {
    pwmp->pwm->CH[pwmp->timer_id].CC &=  PWM_CC_A | ~PWM_CC_B;
  }
}

void pwm_lld_enable_periodic_notification(PWMDriver *pwmp) {
  pwmp->pwm->INTE |= PWM_INTE_CH(pwmp->timer_id);
}

void pwm_lld_disable_periodic_notification(PWMDriver *pwmp) {
  pwmp->pwm->INTE &= ~PWM_INTE_CH(pwmp->timer_id);
}

void pwm_lld_enable_channel_notification(PWMDriver *pwmp,
                                         pwmchannel_t channel) {
  (void)pwmp;
  (void)channel;
  osalDbgAssert(false, "Individual channel notifications are not available on RP2040.");
}

void pwm_lld_disable_channel_notification(PWMDriver *pwmp,
                                          pwmchannel_t channel) {
  (void)pwmp;
  (void)channel;
  osalDbgAssert(false, "Individual channel notifications are not available on RP2040.");
}
